--- a/player/lib.css
+++ b/player/lib.css
@@ -1,6 +1,7 @@
 .player {
     width: 370px;
     margin: 0 auto;
+    user-select: none;
 }
 
 .timeline {
@@ -39,6 +40,12 @@
 
 .player-chunk {
     display: none;
+    position: relative;
+}
+
+.player-chunk-overlay {
+    position: absolute;
+    user-select: none;
 }
 
 .player-chunk-active {
@@ -49,6 +56,7 @@
     position: absolute;
     width: 30%;
     height: 100%;
+    z-index: 100;
 }
 
 .player-chunk-prev {
@@ -59,4 +67,10 @@
 .player-chunk-next {
     top: 0;
     right: 0;
+}
+
+@keyframes  scale {
+    50% {
+        transform: scale(2);
+    }
 }
